--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,21 @@
 == README
 
+=== How to work on the project
+
+Install ruby, version 2.1.
+Install rails with "gem install rails"
+
+Install git.
+Get projekt with "git clone https://github.com/irenenirgendwo/urantransporte" to local folder.
+Run "bundle install" in project folder.
+Run "rake db:migrate" to create the database.
+Run "rails server" to start the development server.
+
+Watch http://localhost:3000/ to enjoy the work. 
+
+
+=== Later: How to get the application running
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
