umstellung auf production umgebung #47

--- a/README.rdoc
+++ b/README.rdoc
@@ -99,6 +99,8 @@ plugin = rack,http
 rack = config.ru
 chdir = [PATH_TO_APP]
 
+env = RAILS_ENV=production
+
 --nginx config--
 server {
         listen [IP4]:80;
