--- a/README.rdoc
+++ b/README.rdoc
@@ -5,8 +5,11 @@
 * Install ruby, version 2.1.
 * Install rails with <code>gem install rails</code>.
 * Install git.
+* Install mysql and packages libmysqld-dev libmysqlclient-dev mysql-client
 * Get projekt with <code>git clone https://github.com/irenenirgendwo/urantransporte</code> to local folder.
 * Run <code>bundle install</code> in project folder.
+* Rename database_sample.yml in database.yml, same with secrets_sample.yml
+* Create local mysql database for development
 * Run <code>rake db:setup</code> or <code>rake db:migrate</code> and <code>rake db:seed</code> to create the database.
 * In the file <code>config/secrets_sample.yml</code> and <code>config/database_sample</code> replace the <code>XXXX</code> parameters by working values and rename the files to <code>config/secrets.yml</code> and <code>config/database.yml</code>
 * Run <code>rails server</code> to start the development server.
